--- a/src/main/resources/templates/layouts/admin-dashboard.html
+++ b/src/main/resources/templates/layouts/admin-dashboard.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>GIC Online Test | Admin Dashboard</title>
+    <title>生徒情報管理システム | Admin Dashboard</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -24,10 +24,10 @@
             <img th:src="@{/images/gic-logo.png}" alt="GIC logo" />
           </div>
           <div>
-            <p class="text-uppercase fw-semibold mb-0 small text-muted">
+            <!-- <p class="text-uppercase fw-semibold mb-0 small text-muted">
               Admin Center
-            </p>
-            <h5 class="mb-0">GIC Online Tests</h5>
+            </p> -->
+            <h5 class="mb-0">生徒情報管理システム</h5>
           </div>
         </div>
 
