fix review complete

--- a/src/main/resources/static/css/register-toastNotification.css
+++ b/src/main/resources/static/css/register-toastNotification.css
@@ -29,7 +29,7 @@
 .custom-toast {
     min-width: 350px;
     max-width: 500px;
-    box-shadow: 0 8px 24px rgba(0,0,0,0.3);
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
     border-radius: 0.5rem;
 }
 
