--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -192,7 +192,6 @@
                     <li class="nav-item"><a class="nav-link" href="#courses">Course Offered</a></li>
                     <li class="nav-item"><a class="nav-link" href="#career">Career Path</a></li>
                     <li class="nav-item"><a class="nav-link" href="#events">Events & News</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
                 </ul>
             </div>
         </div>
@@ -215,7 +214,7 @@
             </p>
 
             <a href="/register" class="btn btn-primary btn-lg px-4 mt-3 rounded-pill">
-                GET STARTED NOW
+                REGISTER NOW
             </a>
         </div>
     </section>
