--- a/src/main/resources/static/css/student-update.css
+++ b/src/main/resources/static/css/student-update.css
@@ -586,6 +586,8 @@ body {
     content: " *";
     color: red;
     margin-left: 5px;
+    font-size: 1.2rem;
+    font-weight: bold;
 }
 
 .debug-border {
